--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,9 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render: bid_rank/**
+skip_render:
+  - saying_rankboard/**
+  - bid_rank/**
 
 # Writing
 new_post_name: :title.md # File name of new posts
