--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.7.0"
+    "version": "3.8.0"
   },
   "dependencies": {
-    "hexo": "^3.7.0",
+    "hexo": "^3.8.0",
     "hexo-autoprefixer": "^1.0.0",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.4",
@@ -14,7 +14,7 @@
     "hexo-generator-feed": "^1.2.0",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-json-content": "^3.0.1",
-    "hexo-generator-search": "^2.2.3",
+    "hexo-generator-search": "^2.3.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-helper-qrcode": "^1.0.2",
     "hexo-renderer-ejs": "^0.3.1",
@@ -22,6 +22,7 @@
     "hexo-renderer-marked": "^0.2.10",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
-    "npm": "^6.4.1"
+    "npm": "^6.4.1",
+    "randomatic": "^3.1.1"
   }
 }
